--- a/.env.example
+++ b/.env.example
@@ -31,14 +31,12 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
-
+SESSION_DOMAIN=nullaaaaaaaaaaaaa
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
